[gd_scene load_steps=8 format=3 uid="uid://byyabnwbd5exm"]

[ext_resource type="Texture2D" uid="uid://ba8ytcqfwst7" path="res://assets/UI/ingame_icons/skill_icons40.png" id="1_4xxbw"]
[ext_resource type="Script" path="res://prefab/UI/DotHUD.gd" id="1_mbgmu"]
[ext_resource type="Texture2D" uid="uid://bfmq2gyafoxdn" path="res://assets/UI/ingame_icons/skill_icons15.png" id="2_ww4c1"]
[ext_resource type="Texture2D" uid="uid://d2wu0o78q3exk" path="res://assets/UI/ingame_icons/skill_icons5.png" id="3_tru6j"]
[ext_resource type="Texture2D" uid="uid://2ei4syl2sne7" path="res://assets/UI/ingame_icons/skill_icons36.png" id="4_snytk"]
[ext_resource type="Texture2D" uid="uid://s7dhgu3nlesx" path="res://assets/UI/ingame_icons/skill_icons19.png" id="5_pa3u3"]
[ext_resource type="Texture2D" uid="uid://bjr8463rq63en" path="res://assets/UI/dot-bar.png" id="6_rs8du"]

[node name="DotHUD" type="Control"]
layout_mode = 3
anchor_right = 0.325
anchor_bottom = 0.144444
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
script = ExtResource("1_mbgmu")
fire_icon = ExtResource("2_ww4c1")
lightning_icon = ExtResource("3_tru6j")
poison_icon = ExtResource("4_snytk")
ice_icon = ExtResource("5_pa3u3")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rs8du")
draw_center = false
patch_margin_left = 51
patch_margin_top = 13
patch_margin_right = 51
patch_margin_bottom = 13

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="PoisonProgress" type="TextureProgressBar" parent="NinePatchRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("1_4xxbw")

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/MarginContainer/HBoxContainer/PoisonProgress"]
modulate = Color(1, 1, 1, 0.109804)
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.0494
anchor_right = 0.9506
anchor_bottom = 0.9506
offset_top = 0.012
offset_right = -0.012001
offset_bottom = -0.012001
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_snytk")
metadata/_edit_use_anchors_ = true

[node name="FireProgress" type="TextureProgressBar" parent="NinePatchRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("1_4xxbw")

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/MarginContainer/HBoxContainer/FireProgress"]
modulate = Color(1, 1, 1, 0.109804)
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="IceProgress" type="TextureProgressBar" parent="NinePatchRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("1_4xxbw")

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/MarginContainer/HBoxContainer/IceProgress"]
modulate = Color(1, 1, 1, 0.109804)
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="LightningProgress" type="TextureProgressBar" parent="NinePatchRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("1_4xxbw")

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/MarginContainer/HBoxContainer/LightningProgress"]
modulate = Color(1, 1, 1, 0.109804)
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
